syntax = "proto3";

package com.sitewhere.grpc.service;

option java_multiple_files = true;
option java_package = "com.sitewhere.grpc.service";
option java_outer_classname = "MicroserviceServices";

import "sitewhere-common.proto";
import "microservice-model.proto";

// Microservice management APIs.
service MicroserviceManagement {

	// #####################
	// ### CONFIGURATION ###
	// #####################

	// Get configuration model.
	rpc GetConfigurationModel (GGetConfigurationModelRequest) returns (GGetConfigurationModelResponse) {}

	// Get global configuration content.
	rpc GetGlobalConfiguration (GGetGlobalConfigurationRequest) returns (GGetGlobalConfigurationResponse) {}

	// Get tenant configuration content.
	rpc GetTenantConfiguration (GGetTenantConfigurationRequest) returns (GGetTenantConfigurationResponse) {}

	// Update global configuration content.
	rpc UpdateGlobalConfiguration (GUpdateGlobalConfigurationRequest) returns (GUpdateGlobalConfigurationResponse) {}

	// Update tenant configuration content.
	rpc UpdateTenantConfiguration (GUpdateTenantConfigurationRequest) returns (GUpdateTenantConfigurationResponse) {}

	// ########################
	// ### SCRIPT TEMPLATES ###
	// ########################

	// Get script templates list.
	rpc GetScriptTemplates (GGetScriptTemplatesRequest) returns (GGetScriptTemplatesResponse) {}

	// Get script template content.
	rpc GetScriptTemplateContent (GGetScriptTemplateContentRequest) returns (GGetScriptTemplateContentResponse) {}
}

// #####################
// ### CONFIGURATION ###
// #####################

// Request for getting configuration model.
message GGetConfigurationModelRequest {
}
	
// Response for creating a batch operation.
message GGetConfigurationModelResponse {
	com.sitewhere.grpc.model.GMicroserviceConfiguration model = 1;
}

// Request for getting global configuration data.
message GGetGlobalConfigurationRequest {
}
	
// Response for getting global configuration data.
message GGetGlobalConfigurationResponse {
	com.sitewhere.grpc.model.GBinaryContent configuration = 1;
}

// Request for getting tenant configuration data.
message GGetTenantConfigurationRequest {
	com.sitewhere.grpc.model.GUUID tenantId = 1;
}
	
// Response for getting tenant configuration data.
message GGetTenantConfigurationResponse {
	com.sitewhere.grpc.model.GBinaryContent configuration = 1;
}

// Request for updating global configuration data.
message GUpdateGlobalConfigurationRequest {
	com.sitewhere.grpc.model.GBinaryContent configuration = 1;
}
	
// Response for updating global configuration data.
message GUpdateGlobalConfigurationResponse {
}

// Request for updating tenant configuration data.
message GUpdateTenantConfigurationRequest {
	com.sitewhere.grpc.model.GUUID tenantId = 1;
	com.sitewhere.grpc.model.GBinaryContent configuration = 2;
}
	
// Response for updating tenant configuration data.
message GUpdateTenantConfigurationResponse {
}

// ########################
// ### SCRIPT TEMPLATES ###
// ########################

// Request for getting list of script templates.
message GGetScriptTemplatesRequest {
}
	
// Response for getting list of script templates.
message GGetScriptTemplatesResponse {
	repeated com.sitewhere.grpc.model.GScriptTemplate templates = 1;
}

// Request for getting script template content.
message GGetScriptTemplateContentRequest {
	string id = 1;
}
	
// Response for getting script template content.
message GGetScriptTemplateContentResponse {
	com.sitewhere.grpc.model.GBinaryContent template = 1;
}
